--- a/es/english-a1.html
+++ b/es/english-a1.html
@@ -25,9 +25,9 @@
 
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
-                    <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-a1.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-a1.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="../en/english-a1.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                    <a href="#" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="../pl/english-a1.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -86,14 +86,15 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese A1</h2>
+          <h2>English A1</h2>
           <p>
-            This is the most basic level of mastery of a language. At this level the speaker is expected to be able to interact easily with others who make an effort to speak slowly and clearly, not in a natural conversational rhythm.
+            Este es el nivel más básico de dominio de un idioma. En este nivel se espera que el hablante pueda interactuar fácilmente con otros que se esfuerzan por hablar despacio y con claridad, sin un ritmo de conversación natural.
 
-           The person is expected to be able to carry out basic conversations such as introducing himself, asking and answering questions about personal data (name, where he lives, hobbies).
+                        Se espera que la persona sea capaz de llevar a cabo conversaciones básicas como presentarse, hacer y responder preguntas sobre datos personales (nombre, lugar de residencia, aficiones).
 
-           The vocabulary is basic, and is limited to concrete nouns and close to the day (domestic animals, parts of the house, food, parts of the body).
-          </p>
+                        El vocabulario es básico, y se limita a sustantivos concretos y cercanos al día (animales domésticos, partes de la casa, comida, partes del cuerpo).
+
+                                </p>
           <h2>Mini Tests </h2>
 
           <button onclick="toggleContent2()">Mini Test 1</button>
