--- a/es/english-a2.html
+++ b/es/english-a2.html
@@ -25,9 +25,9 @@
 
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
-                    <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-a2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-a2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="../en/english-a2.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                    <a href="#" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="../pl/english-a2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -86,12 +86,12 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese A2</h2>
+          <h2>English A2</h2>
       <p>
-        At this level, the grammatical structures and communication skills of the previous level are developed a little more.
+        En este nivel se desarrollan un poco más las estructuras gramaticales y las habilidades comunicativas del nivel anterior. Se espera que el hablante sea capaz de describir en presente y en pasado aspectos sencillos de su entorno inmediato (familia, compras, trabajo, direcciones) así como comunicar de forma sencilla intercambios de información básicos, sencillos y directos.
+                   El curso se divide en tres módulos, cada uno de los cuales consta de varias unidades que cubren los contenidos de A1 y le permiten, al final del curso, poder expresar ideas básicas y comenzar su viaje en el idioma.
 
-        The speaker is expected to be able to describe in the present and in the past simple aspects of their immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information.
-      <h2>Mini Tests </h2>
+                         <h2>Mini Tests </h2>
 
       <button onclick="toggleContent42()">Mini-Test 1</button>
                  <div id="content42" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
@@ -157,9 +157,9 @@
                                 <div id="content48" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                 <iframe src="https://quizlet.com/582804367/match/embed?i=2nc5sb&x=1jj1" height="700" width="100%" style="border:0"></iframe>
                                 </div>
-      <button onclick="toggleContent49()">Irreg Verbs (PPS)</button>
-                                 <div id="content49" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                <iframe src="https://quizlet.com/582830524/match/embed?i=2nc5sb&x=1jj1" height="700" width="100%" style="border:0"></iframe>
+      <button onclick="toggleContent97()">Irreg Verbs (past)</button>
+                                 <div id="content97" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                  <iframe src="https://learningapps.org/watch?v=p6s1fona323" height="700" width="100%" style="border:0"></iframe>
                                  </div>
    <button onclick="toggleContent50()">Numbers</button>
                               <div id="content50" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
@@ -177,6 +177,9 @@
 
                        </article>
 <script src="js/main.js"></script>
+
+                                       <script src="js/main.js"></script>
+
                                  </div>
                                    </body>
                                </html>
