--- a/es/english-b1.html
+++ b/es/english-b1.html
@@ -25,9 +25,9 @@
 
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
-                    <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-b1.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-b1.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="../en/english-b1.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                    <a href="#" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="../pl/english-b1.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -87,14 +87,15 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>Japanese B1</h2>
+          <h2>English B1</h2>
       <p>
-        We are getting closer to the typical "medium level" that is boasted in many curricula without being accredited by any institution.
+        Nos estamos acercando al típico "nivel medio" que se precia en muchos planes de estudio sin estar acreditado por ninguna institución.
 
-       At this level the speaker must be able to engage in conversation with native speakers in everyday life situations (work, school, a restaurant).
+                En este nivel, el hablante debe poder entablar una conversación con hablantes nativos en situaciones de la vida cotidiana (trabajo, escuela, restaurante).
 
-       Abstract vocabulary begins to be mastered and the speaker can describe his experiences or events that have happened to him in the past. He can talk about dreams, ambitions, and hopes for the future. He is able to express his opinion about plans and give explanations about his actions.
-     </p>
+                Se empieza a dominar el vocabulario abstracto y el hablante puede describir sus experiencias o hechos que le han sucedido en el pasado. Puede hablar de sueños, ambiciones y esperanzas para el futuro. Es capaz de expresar su opinión sobre los planes y dar explicaciones sobre sus acciones.
+
+                   </p>
       <h2>Past Indicative Mode</h2>
       <button onclick="toggleContent22()">Exercises 1: Imperfect or Indefinite?</button>
       <div id="content22" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
