--- a/es/spanish.html
+++ b/es/spanish.html
@@ -110,8 +110,6 @@
           <p>El objetivo de este sitio es facilitar a los estudiantes el acceso a una serie de ejercicios linguísticos diseñados especialmente para cada nivel de Español.</p>
 </div>
         </article>
-<script src="js/main.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-  </div>
+<script src="js/main.js"></script>  </div>
     </body>
 </html>
