--- a/pl/english-c2.html
+++ b/pl/english-c2.html
@@ -25,9 +25,9 @@
 
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
-                    <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-b2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="../pl/english-c2.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                    <a href="../es/english-c2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="#" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -86,23 +86,31 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese B2</h2>
+          <h2>English C2</h2>
       <p>
-        This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
 
-                   The speaker is expected to be able to understand and produce complex texts on specific topics and with a certain level of abstraction (write a job application letter, write a review of a film, show or book, write an essay on a problem , for example lifestyle, diet, or environment)
+        I wreszcie dochodzimy do szczytu piramidy, poziomu równego poziomowi tubylca, nawet jeśli można rozpoznać, że język ojczysty danej osoby jest inny.
 
-                   You are able to engage in a conversation with native speakers with a certain level of fluency and spontaneity, with few errors that also do not make it too difficult to understand what the speaker is saying. You can express opinions and points of view, as well as provide advantages and disadvantages on a certain topic.
-      </p>
+                   Wymowa lektora jest prawie idealna, z bardzo małą liczbą błędów, które czasami pozostają niezauważone. Potrafisz bardzo płynnie i spontanicznie wyrażać się używając różnych języków, a nawet posługując się regionalizmami.
+
+                   Jest w stanie przy niewielkim wysiłku zrozumieć konwersacje i mowę ojczystą (radio, telewizja) oraz czytać wszelkiego rodzaju teksty, przy czym język nie jest przeszkodą w prawidłowym zrozumieniu.
+
+
+
+                   Jak możesz sobie wyobrazić, dojście do ostatniego poziomu nie jest kwestią zapisania się na intensywny kurs, ale raczej dużo wysiłku, wytrwałości, nauki, praktyki, spędzenia czasu za granicą zanurzonego w języku docelowym, a nawet zwracania uwagi na takie czynniki jak: osobiste zdolności językowe, wiek, w którym zaczyna się uczyć języka itp.
+
+                   W przypadku poprzednich poziomów również wymaga to dużo pracy i wytrwałości, ale są one bardziej przystępne bez konieczności długiego pobytu za granicą. Czytając, słuchając muzyki w języku angielskim, uczęszczając na zajęcia i korzystając z zasobów Internetu, można w ciągu kilku lat osiągnąć poziom B1 lub B2.
+
+                       </p>
+         <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+
+          </div>
       </div>
-      <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
+<p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-      <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-      </article>
+
+        </article>
 <script src="js/main.js"></script>
-            <script src="js/main.js"></script>
-
-      </div>
-        </body>
-    </html>
+    </body>
+</html>
