--- a/pl/spanish.html
+++ b/pl/spanish.html
@@ -110,8 +110,6 @@
           <p>Celem tej strony jest zapewnienie studentom dostępu do serii ćwiczeń językowych opracowanych specjalnie dla każdego poziomu hiszpańskiego.</p>
 </div>
         </article>
-<script src="js/main.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-  </div>
+<script src="js/main.js"></script>  </div>
     </body>
 </html>
