--- a/spanish.html
+++ b/spanish.html
@@ -110,8 +110,6 @@
                 <p>The objective of this site is to provide students with access to a series of linguistic exercises specially designed for each level of Spanish.</p>
           </div>
         </article>
-<script src="js/main.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-  </div>
+<script src="js/main.js"></script>  </div>
     </body>
 </html>
