--- a/english-b2.html
+++ b/english-b2.html
@@ -26,8 +26,8 @@
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
                     <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-b2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="es/english-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="pl/english-b2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese B2</h2>
+          <h2>English B2</h2>
       <p>
         This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
 
