--- a/english-c1.html
+++ b/english-c1.html
@@ -26,8 +26,8 @@
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
                     <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-b2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="es/english-c1.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="pl/english-c1.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -86,14 +86,20 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese B2</h2>
+
+          <h2>English C1</h2>
       <p>
-        This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
+        It is what is known as a "high level" in mastering a language.
 
-                   The speaker is expected to be able to understand and produce complex texts on specific topics and with a certain level of abstraction (write a job application letter, write a review of a film, show or book, write an essay on a problem , for example lifestyle, diet, or environment)
+                   At this level, not only is one able to understand complex texts, but one can also infer and make deductions about what the text implies (if a text criticizes, advises, questions, or highlights a specific topic). You can produce well-structured and detailed texts with a wide range of vocabulary and linguistic cohesion.
 
-                   You are able to engage in a conversation with native speakers with a certain level of fluency and spontaneity, with few errors that also do not make it too difficult to understand what the speaker is saying. You can express opinions and points of view, as well as provide advantages and disadvantages on a certain topic.
-      </p>
+                   The speaker is able to use effective language in a large number of social, professional and academic contexts with ease.
+
+                   You can express yourself fluently with expressions and turns of phrase and make few errors. Its pronunciation does not make it difficult at all for the listener to understand the message.
+                       </p>
+          <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+
+          </div>
       </div>
       <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
@@ -101,7 +107,6 @@
 
       </article>
 <script src="js/main.js"></script>
-            <script src="js/main.js"></script>
 
       </div>
         </body>
