--- a/japanese-c2.html
+++ b/japanese-c2.html
@@ -26,8 +26,8 @@
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
                     <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/spanish-c2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/spanish-c2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="es/japanese-c2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="pl/japanese-c2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -87,18 +87,18 @@
 <div class="wrapper">
   <article class="img-info">
           <h2>Japanese C2</h2>
-      <p>Y llegamos finalmente a la cúspide de la pirámide, el nivel que se equipara al de un nativo, aun cuando se pueda discernir que la lengua materna de la persona es otra.
+      <p>
+        And we finally arrive at the top of the pyramid, the level that is equal to that of a native, even when it can be discerned that the person's mother tongue is another.
 
-          La pronunciación del hablante es casi perfecta con poquísimos errores que a veces incluso pasan desapercibidos. Puede expresarse espontáneamente con mucha fluidez utilizando un lenguaje variado e incluso haciendo uso de regionalismos.
+                   The speaker's pronunciation is almost perfect with very few errors that sometimes even go unnoticed. You can express yourself very fluently spontaneously using a variety of language and even making use of regionalisms.
 
-          Es capaz de entender conversaciones y discurso nativo (radio, televisión) sin apenas esfuerzo y puede leer todo tipo de textos sin que el idioma sea un impedimento para la correcta comprensión.
+                   He is able to understand conversations and native speech (radio, television) with little effort and can read all kinds of texts without the language being an impediment to correct comprehension.
 
 
 
-          Como os podéis imaginar, alcanzar el último nivel no es una cuestión de apuntarse a un curso intensivo, sino que es necesario mucho esfuerzo, constancia, estudio, práctica, pasar tiempo en el extranjero inmerso en la lengua objetivo e incluso atender a factores como las capacidades lingüísticas personales, la edad a la que se empieza a aprender un idioma, etc.
+                   As you can imagine, reaching the last level is not a matter of signing up for an intensive course, but rather a lot of effort, perseverance, study, practice, spending time abroad immersed in the target language and even paying attention to factors such as the personal linguistic abilities, the age at which one begins to learn a language, etc.
 
-          Para los niveles anteriores igualmente hace falta mucho trabajo y constancia, pero son más asequibles sin necesidad de vivir mucho tiempo en el extranjero. Leyendo, escuchando música en inglés, asistiendo a clase y utilizando los recursos que nos da Internet es posible alcanzar el nivel B1 o B2 en un par de años.
-      </p>
+                   For the previous levels, it also takes a lot of work and perseverance, but they are more affordable without the need to live a long time abroad. By reading, listening to music in English, attending class and using the resources provided by the Internet, it is possible to reach level B1 or B2 in a couple of years.      </p>
          <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
           </div>
@@ -109,7 +109,5 @@
 
         </article>
 <script src="js/main.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-
     </body>
 </html>
