--- a/pl/english-b2.html
+++ b/pl/english-b2.html
@@ -25,9 +25,9 @@
 
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
-                    <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-b2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="../pl/english-b2.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                    <a href="../es/english-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="#" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -86,14 +86,15 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese B2</h2>
+          <h2>English B2</h2>
       <p>
-        This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
+        Jest to średnio-wysoki poziom, o którym mówi się, gdy ktoś chce odnieść się do swojego poziomu biegłości językowej.
 
-                   The speaker is expected to be able to understand and produce complex texts on specific topics and with a certain level of abstraction (write a job application letter, write a review of a film, show or book, write an essay on a problem , for example lifestyle, diet, or environment)
+                            Oczekuje się, że mówca będzie w stanie zrozumieć i napisać złożone teksty na określone tematy i na pewnym poziomie abstrakcji (napisać podanie o pracę, napisać recenzję filmu, programu lub książki, napisać esej na temat problemu, np. styl życia, dieta lub środowisko)
 
-                   You are able to engage in a conversation with native speakers with a certain level of fluency and spontaneity, with few errors that also do not make it too difficult to understand what the speaker is saying. You can express opinions and points of view, as well as provide advantages and disadvantages on a certain topic.
-      </p>
+                            Jesteś w stanie prowadzić rozmowę z native speakerem na pewnym poziomie płynności i spontaniczności, z kilkoma błędami, które również nie utrudniają zrozumienia tego, co mówi rozmówca. Możesz wyrażać opinie i punkty widzenia, a także przedstawiać zalety i wady na określony temat.
+
+                                </p>
       </div>
       <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
