--- a/pl/japanese-c2.html
+++ b/pl/japanese-c2.html
@@ -25,9 +25,9 @@
 
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
-                    <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/japanese-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/japanese-b2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="../pl/japanese-a1.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                    <a href="../es/japanese-a1.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="#" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -86,23 +86,28 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese B2</h2>
-      <p>
-        This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
+          <h2>Japanese C2</h2>
+      <p>Y llegamos finalmente a la cúspide de la pirámide, el nivel que se equipara al de un nativo, aun cuando se pueda discernir que la lengua materna de la persona es otra.
 
-                   The speaker is expected to be able to understand and produce complex texts on specific topics and with a certain level of abstraction (write a job application letter, write a review of a film, show or book, write an essay on a problem , for example lifestyle, diet, or environment)
+          La pronunciación del hablante es casi perfecta con poquísimos errores que a veces incluso pasan desapercibidos. Puede expresarse espontáneamente con mucha fluidez utilizando un lenguaje variado e incluso haciendo uso de regionalismos.
 
-                   You are able to engage in a conversation with native speakers with a certain level of fluency and spontaneity, with few errors that also do not make it too difficult to understand what the speaker is saying. You can express opinions and points of view, as well as provide advantages and disadvantages on a certain topic.
+          Es capaz de entender conversaciones y discurso nativo (radio, televisión) sin apenas esfuerzo y puede leer todo tipo de textos sin que el idioma sea un impedimento para la correcta comprensión.
+
+
+
+          Como os podéis imaginar, alcanzar el último nivel no es una cuestión de apuntarse a un curso intensivo, sino que es necesario mucho esfuerzo, constancia, estudio, práctica, pasar tiempo en el extranjero inmerso en la lengua objetivo e incluso atender a factores como las capacidades lingüísticas personales, la edad a la que se empieza a aprender un idioma, etc.
+
+          Para los niveles anteriores igualmente hace falta mucho trabajo y constancia, pero son más asequibles sin necesidad de vivir mucho tiempo en el extranjero. Leyendo, escuchando música en inglés, asistiendo a clase y utilizando los recursos que nos da Internet es posible alcanzar el nivel B1 o B2 en un par de años.
       </p>
+         <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+
+          </div>
       </div>
-      <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
+<p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-      <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-      </article>
+
+        </article>
 <script src="js/main.js"></script>
-            <script src="js/main.js"></script>
-
-      </div>
-        </body>
-    </html>
+    </body>
+</html>
